--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     // Add raster tile layer (note: file:/// URLs won't work in browser directly)
     var tilesource_layer = L.tileLayer(
-      'file:///C:/Users/222360N/Downloads/webmap/tiles/{z}/{x}/{y}.png', 
+      '/tiles/{z}/{x}/{y}.png', 
       {
         minZoom: 7,
         maxZoom: 12,
